src/objects/NTM_Search_Log__c.object
<CustomObject>
    <description>An object to capture a history of NTM product + market + geography searches from the public site.</description>
    <fields>
        <fullName>Geographies_to_Evaluate__c</fullName>
        <description>Comma separated values delineating which geographies the user has selected to evaluate with this search.</description>
        <inlineHelpText>Comma separated values delineating which geographies the user has selected to evaluate with this search.</inlineHelpText>
        <label>Geographies to Evaluate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Markets_Already_Exporting_To__c</fullName>
        <description>A comma separate list of markets the user selected they are already exporting to.</description>
        <inlineHelpText>A comma separate list of markets the user selected they are already exporting to.</inlineHelpText>
        <label>Markets Already Exporting To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milliseconds_to_return_results__c</fullName>
        <description>How many milliseconds it took to return the search results to the user</description>
        <inlineHelpText>How many milliseconds it took to return the search results to the user</inlineHelpText>
        <label>Milliseconds to return results</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_Returned__c</fullName>
        <description>Number of results returned to the user in their search</description>
        <inlineHelpText>Number of results returned to the user in their search</inlineHelpText>
        <label>Number of Results Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_Currently_Exporting__c</fullName>
        <description>A comma separated list of product HS codes queried by the user</description>
        <inlineHelpText>A comma separated list of product HS codes queried by the user</inlineHelpText>
        <label>Products Currently Exporting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Submitted_Date_Time__c</fullName>
        <description>The date &amp; time that the search was submitted by the user</description>
        <inlineHelpText>The date &amp; time that the search was submitted by the user</inlineHelpText>
        <label>Search Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip code entered by the user for their location, used to search for assigned USEAC</description>
        <inlineHelpText>Zip code entered by the user for their location, used to search for assigned USEAC</inlineHelpText>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NTM Search Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Products_Currently_Exporting__c</columns>
        <columns>Markets_Already_Exporting_To__c</columns>
        <columns>Geographies_to_Evaluate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NTMSearchLog-{00000000}</displayFormat>
        <label>NTM Search Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTM Search Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>